# intraconnection-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/adc/: adcs.hpp  constants.hpp  mcp3424.hpp
include/i2c/: i2c.hpp  serial_buffer.hpp
include/util/: mock_adc.hpp  util.hpp
pd-object/: LICENSE.txt  Makefile  README.txt  build.sh  build_mock.sh  dist.sh  dist_pi.sh  intraconnection_adc.cpp
src/adc/: adcs.cpp  main.cpp  mcp3424.cpp  test.cpp
src/i2c/: i2c.cpp  serial_buffer.cpp
src/util/: mock_adc.cpp  util.cpp
